# scrabble

./: .dockerignore  .gitattributes  .gitignore  .gitmodules  Dockerfile  LICENSE  README.md
api/: Cargo.toml
api/src/: auth.rs  error.rs  games.rs  leaderboard.rs  lib.rs  (+2 more)
client/: Cargo.toml  index.html  index.scss
client/scss/: board.scss  index.scss
client/scss/components/: board.scss  mod.scss  tile.scss
client/scss/routes/: account.scss  login.scss  mod.scss  not-found.scss  play.scss  signup.scss
client/src/: app.rs  context.rs  contexts.rs  error.rs  lib.rs  main.rs
client/src/components/: board.rs  chat.rs  counter.rs  error_msg.rs  fa_icon.rs  footer.rs  friends_table.rs  leaderboard.rs  mod.rs  navbar.rs  progress.rs  progress_bar.rs  rack.rs  scoreboard.rs  separator.rs  square.rs  tile.rs  tiles.rs  toast.rs
client/src/contexts/: auth.rs  mod.rs
client/src/pages/: friends.rs  home.rs  invalid_state.rs  mod.rs  not_found.rs
client/src/pages/games/: game_list.rs  game_stats.rs
client/src/pages/leaderboards/: friends_leaderboard.rs  leaderboard.rs  mod.rs
client/src/pages/live/: app_state.rs  create_or_join.rs  mod.rs  playing.rs
client/src/pages/users/: account.rs  login.rs  mod.rs  reset_password.rs  reset_with_secret.rs  sign_up.rs
client/src/requests/: friends.rs  games.rs  leaderboard.rs  live.rs  mod.rs  users.rs
client/src/routes/: account.rs  friends.rs  home.rs  invalid_state.rs  login.rs  mod.rs  not_found.rs  play.rs  reset_password.rs  reset_with_secret.rs  sign_up.rs  signup.rs
client/src/routes/games/: game_list.rs  game_stats.rs  mod.rs
client/src/routes/leaderboards/: friends_leaderboard.rs  leaderboard.rs  mod.rs
client/src/routes/live/: mod.rs
client/src/routes/users/: account.rs  login.rs  mod.rs  reset_password.rs  sign_up.rs
client/src/services/: friends.rs  games.rs  leaderboard.rs  mod.rs  users.rs
common/: Cargo.toml
scrabble/: Cargo.toml
server/: .env.example  .gitignore  Cargo.toml  Dockerfile  generate_cert.sh  init_tables.sql  scrabble.db  scrabble.dbml
server/data/: README.md  words.txt
server/migrations/: 20211106150341_create_tables.down.sql  20211106150341_create_tables.sql  20211106150341_create_tables.up.sql  20220223121321_tbl_friend.sql
server/scripts/: install_deps.sh  run_docker.sh  setup.sh  sort_wordlist.py
server/sql/friends/: delete.sql  insert.sql  list_friends.sql  list_incoming.sql  list_outgoing.sql
server/sql/games/: find_by_id_and_user.sql  game_stats.sql  leaderboard_row.sql  list.sql  players_by_game_id.sql  plays_by_game_id.sql  tiles_by_game_id.sql
server/sql/leaderboard/: friends.sql  overall.sql
server/sql/live/: find_username.sql  insert_ai_player.sql  insert_game.sql  insert_human_player.sql  insert_play.sql  insert_player.sql  insert_player_if_friend.sql  insert_tile.sql  insert_word.sql  set_game_over.sql  set_loser.sql  set_winner.sql
server/sql/password_reset/: delete.sql  find_by_id_user.sql  find_by_username.sql  insert.sql
server/sql/users/: count_username.sql  delete.sql  find_by_email.sql  find_by_id.sql  find_by_username.sql  insert.sql  update.sql  username_exists.sql  username_or_email_exists.sql
server/src/: auth.rs  db.rs  error.rs  fsm.rs  lib.rs  live_games.rs  mailer.rs  main.rs
server/src/auth/: hex.rs  jwt.rs  mod.rs  password.rs  username.rs  validation.rs
server/src/db/: mod.rs  user.rs
server/src/filters/: friends.rs  games.rs  leaderboard.rs  live.rs  mod.rs  users.rs
server/src/game/: bitboard.rs  mod.rs  play.rs  tile.rs  word_tree.rs
server/src/handlers/: friends.rs  games.rs  leaderboard.rs  live.rs  mod.rs  users.rs
server/src/handlers/live/: game.rs  games.rs  mod.rs  player.rs  room.rs  rooms.rs
server/src/models/: friend.rs  friend_request.rs  game.rs  mod.rs  outcome.rs  password_reset.rs  play.rs  player.rs  tile.rs  user.rs  word.rs
server/src/routes/: friends.rs  games.rs  leaderboard.rs  live_games.rs  mod.rs  users.rs  words.rs
server/static/: index-6ea814764da47817.css  index-bf7c0c31e540b67d.js  index-bf7c0c31e540b67d_bg.wasm  index-d17c831a5f3acdf1.js  index-d17c831a5f3acdf1_bg.wasm  index.css  index.html  index.js  index.wasm
(+60 files in other folders)
