[package]
name = "client"
version = "0.1.0"
authors = ["Tom Thorogood <tomthorogood@outlook.com>"]
edition = "2021"

[dependencies]
api = { path = "../api" }
scrabble = { path = "../scrabble" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
wee_alloc = "0.4.5"
sycamore = "0.8.0-beta.2"
sycamore-router = "0.8.0-beta.2"
log = "0.4.6"
wasm-logger = "0.2.0"
console_error_panic_hook = "0.1.7"
reqwasm = "0.4.1"
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }

[dependencies.web-sys]
features = ["InputEvent", "KeyboardEvent", "Location", "Storage"]
version = "0.3.56"

[profile.release]
panic = 'abort'
codegen-units = 1
opt-level = 's'
lto = true
