[package]
name = "client"
version = "0.1.0"
authors = ["Tom Thorogood <tomthorogood@outlook.com>"]
edition = "2021"

[dependencies]
api = { path = "../api" }
scrabble = { path = "../scrabble" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
wee_alloc = "0.4.5"
sycamore = { version = "=0.8.0-beta.4", features = ["suspense"] }
sycamore-router = "=0.8.0-beta.4"
log = "0.4.6"
console_error_panic_hook = "0.1.7"
wasm-logger = "0.2.0"
futures = "0.3.21"
reqwasm = "0.5.0"
bincode = "1.3"

[dependencies.web-sys]
features = ["InputEvent", "KeyboardEvent", "Location", "Storage"]
version = "0.3.56"

[profile.release]
panic = 'abort'
codegen-units = 1
opt-level = 's'
lto = true
