[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
scrabble = { path = "../scrabble" }
api = { path = "../api" }
warp = { version = "0.3.2", features = ["tls"] }
rand = "0.8.4"
rust-argon2 = "1"
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros"] }
serde = { version = "1.0", features = ["derive"] }
lazy_static = "1"
jsonwebtoken = "8.0.1"
sqlx = { version = "0.5", features = [ "sqlite", "runtime-tokio-rustls" ] }
uuid = { version = "0.8", features = ["serde", "v4"] }
dotenv = "0.15.0"
chrono = "0.4.19"
log = "0.4.14"
env_logger = "0.9.0"
futures = "0.3.21"
