[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
api = { path = "../api" }
bincode = "1.3"
chrono = { version = "0.4.19" }
dotenv = "0.15.0"
env_logger = "0.9.0"
futures = "0.3.21"
jsonwebtoken = "8.0"
lazy_static = "1.4"
lettre = { version = "=0.10.0-rc.4", default-features = false, features = ["smtp-transport", "tokio1-rustls-tls", "hostname", "builder", "pool"] }
log = "0.4.14"
rand = "0.8.5"
regex = "1.5"
rust-argon2 = "1.0"
scrabble = { path = "../scrabble" }
serde = { version = "1.0", features = ["derive"] }
sqlx = { version = "0.5", features = [ "postgres", "runtime-tokio-rustls", "chrono" ] }
tokio = { version = "1.17", features = ["rt", "rt-multi-thread", "macros"] }
tokio-stream = "0.1.8"
warp = { version = "0.3.2", features = ["tls"] }

[profile.dev.package.sqlx-macros]
opt-level = 3
